# willhaben

./: .gitignore  README.md  ReadMe.md  app.js  app.py  build.gradle  compose.yaml  config-template.ini  main.py  pyproject.toml  replacing.py  settings.gradle  settings.gradle.kts
.github/workflows/: produce_send_report.yml  pylint.yml  test.yml  uv.yml
buildSrc/: build.gradle.kts  settings.gradle.kts
buildSrc/src/main/kotlin/: orm-workshop.java-conventions.gradle.kts
playground/: wien_query.js  wien_query.py
prompts/: check_if_sublet.prompt
prompts_codegeneration/: meta_prompt_for_lovable.prompt
pythonsrc/: project_root.py  relevant_columns.py
pythonsrc/frontend/: app.py
pythonsrc/frontend/templates/: index.html
pythonsrc/listing/: listing_fetcher_orchestrator.py
pythonsrc/listing/fetcher/: listing_details_fetcher.py
pythonsrc/llm/: llm_endpoint.py  replacing.py
pythonsrc/llm/prompts/: check_if_sublet.prompt
scripts/: docker-compose.yaml  init-user-db.sh
solution1-via-repository/: build.gradle.kts
src/: config.py  get_listing2.py  get_listings.py  get_listings2.py  get_single_listing.py  json_handler.py  listing_details_fetcher.py  listings_overview_fetcher.py  multiple_listings.py  project_root.py  prompt_parser.py  relevant_columns.py  single_listing.py  wien_query.py
src/fetching/: fetcher.py  listing_details_fetcher.py  listings_overview_fetcher.py
src/fetching/listings/: multiple_listings.py  single_listing.py
src/frontend/: app.py
src/listing/: listing_fetch_script.py  listing_fetcher_orchestrator.py
src/listing/fetcher/: fetcher.py  listing_details_fetcher.py  listings_overview_fetcher.py
src/listing/structure/: listing.java  multiple_listings.py  single_listing.py
src/llm/: llm_endpoint.py  prompt_parser.py
src/main/java/de/danielfridljand/willhaben/: WillhabenApplication.java
src/main/resources/: application.properties
src/test/java/de/danielfridljand/willhaben/: TestWillhabenApplication.java  TestcontainersConfiguration.java  WillhabenApplicationTests.java
src/test/ressources/feature/: advancedFilter.feature  columnDescription.feature  register.feature  searchagent.feature
src/willhaben/: __init__.py
templates/: index.html
test/: listing_fetcher_orchestrator_endtoendtest.py  test.py  test_offline.py  test_single_listing.py
test/listing/: test_endtoend_listing_fetcher_orchestrator.py  test_unit_listing_fetcher_orchestrator.py
test/test_data/: response_content.html
tests/: conftest.py
tests/listing/: test_endtoend_listing_fetcher_orchestrator.py  test_unit_listing_fetcher_orchestrator.py
tests/test_data/: response_content.html
willhaben-grabber-directory/: build.gradle.kts
willhaben-grabber-directory/src/main/resources/: application.properties
(+18 files in other folders)
