[project]
name = "willhaben"
version = "0.1.0"
description = ""
authors = [
  "Daniel Fridljand <daniel.fridljand@gmail.com>"
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests","pip", "beautifulsoup4", "openai", "colorama", 'pylint', "pytest"]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 150 #TODO bring this down

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]

[tool.ruff.lint.pydocstyle]
convention = "google"