[project]
name = "willhaben"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "danielfrid", email = "daniel.fridljand@tngtech.com" }
]
requires-python = ">=3.12"
dependencies = ["requests","pip", "Flask", "pandas", "pytest>=8.3.5"] #TODO remove pytest from here

[project.scripts]
pytest = "pytest:main"
willhaben = "willhaben:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.uv]
dev-dependencies = [
    "pytest",
    # Any other test-specific dependencies
    'pylint',
]
[dependency-groups]
dev = [
    "ruff>=0.11.8",
    "pytest>=8.3.5"
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 150 #TODO bring this down

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"